# CppCalculatorV2

./: .gitignore  Berekening responsetijden.xlsx  CMakeLists.txt  Calculator.cpp  Calculator.h  README.md  Test Input.xlsx  main.cpp  run-test.ps1  test-input.txt  test-output-check.txt
.github/workflows/: ci.yml
tests/: CMakeLists.txt  bulk_tests_division.cpp  bulk_tests_multiply.cpp  parser_tests.cpp  test_calculator.cpp
